--- a/pages/historia.html
+++ b/pages/historia.html
@@ -14,10 +14,10 @@
 
 <body>
     <div class="botoesHistoria slidesDiv-fading">
-        <button onclick="trocarDiv(-1)" class="ripple">
+        <button onclick="trocarDiv(-1)">
             Anterior
         </button>
-        <button onclick="trocarDiv(+1)" class="ripple">
+        <button onclick="trocarDiv(+1)">
             Próximo
         </button>
     </div>
