Refatoração do CSS

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -7,13 +7,13 @@
     <title>GrandChase Dimensional Chaser</title>
     <link rel="icon" href="../images/icons/GrandChase.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/historia.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
     <script src="../scripts/jquery-3.1.1.min.js"></script>
     <script src="../scripts/main.js"></script>
 </head>
 
 <body>
-    <div class="botoesHistoria slidesDiv-fading">
+    <div class="fundoBotoes slidesDiv-fading">
         <button onclick="trocarDiv(-1)">
             Anterior
         </button>
@@ -21,7 +21,7 @@
             Próximo
         </button>
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>As Três Deusas</h1>
         <h3>3300 Anos Atrás</h3>
         <p>
@@ -30,7 +30,7 @@
         </p>
         <img src="../images/history/1_kakaodeityillust.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>1ª Guerra Demoníaca</h1>
         <h3>Ano Divino, 1300</h3>
         <p>
@@ -40,7 +40,7 @@
         </p>
         <img src="../images/history/2_firstmagicwar.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>Queda de Calnat</h1>
         <h3>Ano Divino, 1800</h3>
         <p>
@@ -55,7 +55,7 @@
         </p>
         <img src="../images/history/3_greatkounatexplosion.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>Nascimento de Cazeaje</h1>
         <h3>Ano dos Reinos, 1447</h3>
         <p>
@@ -68,7 +68,7 @@
         </p>
         <img src="../images/history/4_royalgenocide.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>Guerra dos Reinos</h1>
         <h3>Ano dos Reinos, 1455</h3>
         <p>
@@ -77,7 +77,7 @@
         </p>
         <img src="../images/history/5_fiveyearwar.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>A Criação da GrandChase</h1>
         <h3>Ano dos Reinos, 1459</h3>
         <p>
@@ -86,7 +86,7 @@
         </p>
         <img src="../images/history/6_grandchasefounders.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>Castelo de Cazeaje</h1>
         <p>
             A GrandChase derrotou Cazeaje na península de Ellia, e Lass, que estava sendo controlado por Cazeaje,
@@ -94,7 +94,7 @@
         </p>
         <img src="../images/history/7_ellialass.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>O Fim de Astaroth</h1>
         <p>
             No fim de uma batalha sangrenta contra a GrandChase, Astaroth tentou reativar o Martelo de Ernasis,
@@ -103,7 +103,7 @@
         </p>
         <img src="../images/history/8_baldinarreborn.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>Profecia dos 12 Discípulos</h1>
         <p>
             Existia uma profecia de que a paz iria voltar a Ernas com o sacrifício de 12 pessoas.<br>
@@ -113,7 +113,7 @@
         </p>
         <img src="../images/history/9_arealizationoftheprophecy.png" class="imagemHistoria">
     </div>
-    <div class="paragrafoHistoria slidesDiv slidesDiv-fading">
+    <div class="fundoTextos slidesDiv slidesDiv-fading">
         <h1>Torre da Extinção</h1>
         <p>
             No fim da Profecia dos 12 Discípulos, a Torre da Extinção apareceu. Lá dentro, Cazeaje e Elscud
