--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -7,14 +7,14 @@
     <title>GrandChase Dimensional Chaser</title>
     <link rel="icon" href="../images/icons/GrandChase.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/personagens.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
     <script src="../scripts/jquery-3.1.1.min.js"></script>
     <script src="../scripts/personagens.js"></script>
 </head>
 
 <body>
     <div class="personagens">
-        <div class="barraPersonagens slidesDiv-fading">
+        <div class="barraPersonagens fundoBotoes slidesDiv-fading">
             <table>
                 <tr>
                     <td><img src="../images/icons/01_Elesis.png" onclick="mostrarDiv(0)"></td>
@@ -42,7 +42,7 @@
                 </tr>
             </table>
         </div>
-        <div class="barraDescricao slidesDiv-fading">
+        <div class="barraDescricao fundoTextos slidesDiv-fading">
             <audio id="musica" preload="auto"></audio>
             <!--Elesis-->
             <div class="personagem slidesDiv slidesDiv-fading">
