Criação do Sobre.html e Mundo.html - Pré Release

--- a/index.html
+++ b/index.html
@@ -22,13 +22,24 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <a href="index.html" class="ripper">Início</a>
-            <a onclick="carregar('pages/historia.html');" href="#" class="ripper">História</a>
+            <a href="index.html">Início</a>
+            <a onclick="carregar('pages/historia.html');" href="#">História</a>
             <a onclick="carregar('pages/personagens.html');" href="#">Personagens</a>
             <a onclick="carregar('pages/mundos.html');" href="#">Mundos</a>
             <a onclick="carregar('pages/sobre.html');" href="#">Sobre</a>
         </div>
-        <div class="content" id="main"></div>
+        <div class="content" id="main">
+            <div class="fundoBotoes slidesDiv-fading"
+                style="position: absolute; bottom: 0; right: 0; width: 30%; margin-right: 0.5%">
+                <p>
+                    Instituto Federal de São Paulo, Câmpus Hortolândia<br>
+                    Curso: Análise e Desenvolvido de Sistemas - 5º Semestre (2019)<br>
+                    Disciplina: Desenvolvimento Web<br>
+                    Docente: Leandro Camara Ledel<br>
+                    Desenvolvido por: Dumas Morais de Carvalho<br>
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 
