--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -65,9 +65,17 @@
                 <div class="descricaoPersonagem">
                     <h2>"A Capitã dos Cavaleiros Vermelhos e Líder da GrandChase"</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate cumque adipisci
-                        officiis libero accusantium aperiam inventore commodi pariatur veniam consequatur exercitationem
-                        dolore culpa nam laborum consectetur voluptas, atque est.
+                        Elesis nasceu como a filha mais velha da família Sieghart, ela treinou duramente desde que tinha
+                        idade para segurar uma espada, e foi a Capitã dos Cavaleiros Vermelhos por muitos anos. Como
+                        cirança, Elesis não entendia os motivos da criação severa de seu pai. Porém, quando cresceu, ela
+                        começou a compreender a importância dos métodos de seu pai e dedicou todo seu tempo para se
+                        tornar mmais forte. Seu pai, Elscud, juntou-se a um time dedicado a perseguir Cazeaje.<br><br>
+                        Elesis ficou inconsolável ao descobrir que durante a batalha do time de seu pai e Cazeaje, ele
+                        havia desaparecido. Mais tarde, a Rainha de Serdin enviou uma carta secreta para Elesis, pedindo
+                        que ela se juntasse à GrandChase, uma união entre Canaban e Serdin dedicada a perseguir Cazeaje.
+                        Após receber este pedido, Elesis deixou sua casa e foi para a Floresta dos Desafios no Reino de
+                        Serdin, o local combinado. Ali, ela conheceu duas garotas, Lire e Arme que iriam mudar seu
+                        destino para sempre.
                     </p>
                 </div>
             </div>
