Remoção e Alteração de Styles

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -15,7 +15,7 @@
 <body>
     <div class="fundoTextos slidesDiv slidesDiv-fading" style="height: 95%">
         <img src="../images/grandchase/mobile/logos/Logo_01.png" class="imagemSobre" style="width: 40%">
-        <p>
+        <p style="font-size: 2vh">
             GrandChase: Dimensional Chaser, também conhecido como GrandChase for Kakao na Coréia do Sul e às vezes
             chamado apenas de GrandChase, é um jogo para celular desenvolvido pela KOG Studios para plataformas
             Android iOS, sendo a sequência original do jogo clássico desenvolvido para computadores que foi encerrado no
@@ -30,7 +30,7 @@
             A sequência para o jogo clássico de GrandChase foi anunciada em um evento no ano de 2016, sendo que no final
             de 2017 houve a abertura do primeiro servidor fechado de testes para alguns jogadores e logo no ínicio de
             2018 foi lançado oficialmente o servidor coreano sob o título de "GrandChase for Kakao".<br><br>
-            O lançamento global oficial do jogo foi feito no final de 2018, sob um novo nome "GrandChase: Dimensional
+            O lançamento internacional do jogo foi feito no final de 2018, sob um novo nome "GrandChase: Dimensional
             Chaser", trazendo consigo a nostalgia para diversos jogadores que acompanhavam o tão amado universo de
             GrandChase.
         </p>
