--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/personagens.js"></script>
 </head>
 
 <script type="text/javascript">
