Melhoria da Estrutura para o GitHub Pages

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -1,128 +1,114 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GrandChase Dimensional Chaser</title>
-    <link rel="icon" href="../images/icons/GrandChase.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
-    <script src="../scripts/jquery-3.1.1.min.js"></script>
-    <script src="../scripts/main.js"></script>
-</head>
+<script src="scripts/trocarDiv.js"></script>
 
-<body>
-    <div class="fundoBotoes slidesDiv-fading">
-        <button onclick="trocarDiv(-1)">
-            Anterior
-        </button>
-        <button onclick="trocarDiv(+1)">
-            Próximo
-        </button>
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>As Três Deusas</h1>
-        <h3>3300 Anos Atrás</h3>
-        <p>
-            As Três Deusas desceram sobre o centro do continente de Arquimídia, onde fundaram o Reino de Calnat,
-            cujo brilhante civilização mágica floresceu por milhares de anos. Este foi o ínicio do 1º Ano Divino.
-        </p>
-        <img src="../images/history/1_kakaodeityillust.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>1ª Guerra Demoníaca</h1>
-        <h3>Ano Divino, 1300</h3>
-        <p>
-            O demônio Heitaros do partido de demônios extremistas invadiu Ernas, e as Três Deusas luataram para
-            impedi-lo. Durante a guerra, Heitaros perdeu grande parte de seus poderes e sua posição no Mundo dos
-            Demônios. As Deusas também foram enfraquecidas e não puderam mais continuar naquele mundo.
-        </p>
-        <img src="../images/history/2_firstmagicwar.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>Queda de Calnat</h1>
-        <h3>Ano Divino, 1800</h3>
-        <p>
-            O Primeiro Ministro do Reino de Calnat, Bardinar, falhou em absorver o poder divino do Martelo de
-            Ernasis, causando uma explosão gigantesca que, infelizmente, levou a gloriosa civilização de Calnat
-            desaparecer para sempre.
-        </p>
-        <h3>Centenas de Anos Depois</h3>
-        <p>
-            Como um espírito maligno, Bardinar tomou posse da alma do guardião do Templo de Xênia, Astaroth, e
-            possuiu seu corpo.
-        </p>
-        <img src="../images/history/3_greatkounatexplosion.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>Nascimento de Cazeaje</h1>
-        <h3>Ano dos Reinos, 1447</h3>
-        <p>
-            Após terminarem seus estudos no exterior, a Princesa de Canaban e companheiros estavam retornando para o
-            reino quando foram atacados por Astaroth, além de invocar um feitiço de demonização na amiga da princesa
-            e guarda real, Karina.<br>
-            Enquanto se transformava em um demônio, Karina foi declarada a principal culpada do incidente. Diante da
-            dificuldade de encontrar qualquer pessoa que acreditasse nela, o desespero de Karina se transformou em
-            ódio pela raça humana. Ela jurou lealdade a Astaroth e passou a se chamar Cazeaje.
-        </p>
-        <img src="../images/history/4_royalgenocide.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>Guerra dos Reinos</h1>
-        <h3>Ano dos Reinos, 1455</h3>
-        <p>
-            Sob o controle de Cazeaje, o Reino de Canaban declarou guerra contra o Reino de Serdin.<br>
-            Por 5 anos a guerra se alastrou e o continente de Vermécia foi inteiramente banhado com sangue.
-        </p>
-        <img src="../images/history/5_fiveyearwar.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>A Criação da GrandChase</h1>
-        <h3>Ano dos Reinos, 1459</h3>
-        <p>
-            Como o objetivo de de perseguir a principal culpada pela Guerra dos Reinos, Cazeaje, a Rainha de Serdin
-            chamou três garotas do Reino de Canaban, Reino de Serdin e Ilha de Eryuell e estabeleceu a GrandChase.
-        </p>
-        <img src="../images/history/6_grandchasefounders.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>Castelo de Cazeaje</h1>
-        <p>
-            A GrandChase derrotou Cazeaje na península de Ellia, e Lass, que estava sendo controlado por Cazeaje,
-            recuperou sua consciência e se juntou ao grupo.
-        </p>
-        <img src="../images/history/7_ellialass.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>O Fim de Astaroth</h1>
-        <p>
-            No fim de uma batalha sangrenta contra a GrandChase, Astaroth tentou reativar o Martelo de Ernasis,
-            porém, Grandiel conseguiu impedi-lo selando a si mesmo e Astaroth no Labirinto Fantasmagórico que havia
-            criado.
-        </p>
-        <img src="../images/history/8_baldinarreborn.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>Profecia dos 12 Discípulos</h1>
-        <p>
-            Existia uma profecia de que a paz iria voltar a Ernas com o sacrifício de 12 pessoas.<br>
-            O grupo da GrandChase que havia se reunido graças à profecia lutou contra Veigas, o Emissãrio da
-            Destruição, que veio para destruir Ernas. Entretanto, durante esta batalha, Veigas percebeu que a
-            profecia era falsa.
-        </p>
-        <img src="../images/history/9_arealizationoftheprophecy.png" class="imagemHistoria">
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h1>Torre da Extinção</h1>
-        <p>
-            No fim da Profecia dos 12 Discípulos, a Torre da Extinção apareceu. Lá dentro, Cazeaje e Elscud
-            esperavam pela GrandChase.<br>
-            Eles recuaram após o confronto com a GrandChase e, enquanto desapareciam, uma Fenda Dimensional abriu no
-            centro da Torre da Extinção.
-        </p>
-        <img src="../images/history/10_kazefinale.png" class="imagemHistoria">
-    </div>
-</body>
-
-</html>
+<div class="fundoBotoes divsFading">
+    <button onclick="trocarDiv(-1)">
+        Anterior
+    </button>
+    <button onclick="trocarDiv(+1)">
+        Próximo
+    </button>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>As Três Deusas</h1>
+    <h3>3300 Anos Atrás</h3>
+    <p>
+        As Três Deusas desceram sobre o centro do continente de Arquimídia, onde fundaram o Reino de Calnat,
+        cujo brilhante civilização mágica floresceu por milhares de anos. Este foi o ínicio do 1º Ano Divino.
+    </p>
+    <img src="images/history/1_kakaodeityillust.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>1ª Guerra Demoníaca</h1>
+    <h3>Ano Divino, 1300</h3>
+    <p>
+        O demônio Heitaros do partido de demônios extremistas invadiu Ernas, e as Três Deusas luataram para
+        impedi-lo. Durante a guerra, Heitaros perdeu grande parte de seus poderes e sua posição no Mundo dos
+        Demônios. As Deusas também foram enfraquecidas e não puderam mais continuar naquele mundo.
+    </p>
+    <img src="images/history/2_firstmagicwar.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>Queda de Calnat</h1>
+    <h3>Ano Divino, 1800</h3>
+    <p>
+        O Primeiro Ministro do Reino de Calnat, Bardinar, falhou em absorver o poder divino do Martelo de
+        Ernasis, causando uma explosão gigantesca que, infelizmente, levou a gloriosa civilização de Calnat
+        desaparecer para sempre.
+    </p>
+    <h3>Centenas de Anos Depois</h3>
+    <p>
+        Como um espírito maligno, Bardinar tomou posse da alma do guardião do Templo de Xênia, Astaroth, e
+        possuiu seu corpo.
+    </p>
+    <img src="images/history/3_greatkounatexplosion.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>Nascimento de Cazeaje</h1>
+    <h3>Ano dos Reinos, 1447</h3>
+    <p>
+        Após terminarem seus estudos no exterior, a Princesa de Canaban e companheiros estavam retornando para o
+        reino quando foram atacados por Astaroth, além de invocar um feitiço de demonização na amiga da princesa
+        e guarda real, Karina.<br>
+        Enquanto se transformava em um demônio, Karina foi declarada a principal culpada do incidente. Diante da
+        dificuldade de encontrar qualquer pessoa que acreditasse nela, o desespero de Karina se transformou em
+        ódio pela raça humana. Ela jurou lealdade a Astaroth e passou a se chamar Cazeaje.
+    </p>
+    <img src="images/history/4_royalgenocide.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>Guerra dos Reinos</h1>
+    <h3>Ano dos Reinos, 1455</h3>
+    <p>
+        Sob o controle de Cazeaje, o Reino de Canaban declarou guerra contra o Reino de Serdin.<br>
+        Por 5 anos a guerra se alastrou e o continente de Vermécia foi inteiramente banhado com sangue.
+    </p>
+    <img src="images/history/5_fiveyearwar.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>A Criação da GrandChase</h1>
+    <h3>Ano dos Reinos, 1459</h3>
+    <p>
+        Como o objetivo de de perseguir a principal culpada pela Guerra dos Reinos, Cazeaje, a Rainha de Serdin
+        chamou três garotas do Reino de Canaban, Reino de Serdin e Ilha de Eryuell e estabeleceu a GrandChase.
+    </p>
+    <img src="images/history/6_grandchasefounders.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>Castelo de Cazeaje</h1>
+    <p>
+        A GrandChase derrotou Cazeaje na península de Ellia, e Lass, que estava sendo controlado por Cazeaje,
+        recuperou sua consciência e se juntou ao grupo.
+    </p>
+    <img src="images/history/7_ellialass.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>O Fim de Astaroth</h1>
+    <p>
+        No fim de uma batalha sangrenta contra a GrandChase, Astaroth tentou reativar o Martelo de Ernasis,
+        porém, Grandiel conseguiu impedi-lo selando a si mesmo e Astaroth no Labirinto Fantasmagórico que havia
+        criado.
+    </p>
+    <img src="images/history/8_baldinarreborn.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>Profecia dos 12 Discípulos</h1>
+    <p>
+        Existia uma profecia de que a paz iria voltar a Ernas com o sacrifício de 12 pessoas.<br>
+        O grupo da GrandChase que havia se reunido graças à profecia lutou contra Veigas, o Emissãrio da
+        Destruição, que veio para destruir Ernas. Entretanto, durante esta batalha, Veigas percebeu que a
+        profecia era falsa.
+    </p>
+    <img src="images/history/9_arealizationoftheprophecy.png" class="imagemHistoria">
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h1>Torre da Extinção</h1>
+    <p>
+        No fim da Profecia dos 12 Discípulos, a Torre da Extinção apareceu. Lá dentro, Cazeaje e Elscud
+        esperavam pela GrandChase.<br>
+        Eles recuaram após o confronto com a GrandChase e, enquanto desapareciam, uma Fenda Dimensional abriu no
+        centro da Torre da Extinção.
+    </p>
+    <img src="images/history/10_kazefinale.png" class="imagemHistoria">
+</div>
