--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <script src="scripts/main.js"></script>
-    <script src="scripts/personagens.js"></script>
 </head>
 
 <script type="text/javascript">
@@ -23,14 +21,14 @@
     <div class="container">
         <div class="sidebar">
             <a href="index.html">Início</a>
-            <a onclick="carregar('pages/historia.html');" href="#">História</a>
-            <a onclick="carregar('pages/personagens.html');" href="#">Personagens</a>
-            <a onclick="carregar('pages/mundos.html');" href="#">Mundos</a>
-            <a onclick="carregar('pages/sobre.html');" href="#">Sobre</a>
+            <a onclick="carregar('pages/historia.html');">História</a>
+            <a onclick="carregar('pages/personagens.html');">Personagens</a>
+            <a onclick="carregar('pages/mundos.html');">Mundos</a>
+            <a onclick="carregar('pages/sobre.html');">Sobre</a>
         </div>
         <div class="content" id="main">
-            <div class="fundoBotoes slidesDiv-fading"
-                style="position: absolute; bottom: 0; right: 0; width: 35%; margin-right: 0.5%">
+            <div class="fundoBotoes divsFading"
+                style="position: absolute; bottom: 0; right: 0; width: 35%; margin-right: 1%; margin-bottom: 1%">
                 <p>
                     Instituto Federal de São Paulo, Câmpus Hortolândia<br>
                     Curso: Análise e Desenvolvido de Sistemas - 5º Semestre (2019)<br>
