--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -1,73 +1,59 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GrandChase Dimensional Chaser</title>
-    <link rel="icon" href="../images/icons/GrandChase.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../styles/main.css">
-    <script src="../scripts/jquery-3.1.1.min.js"></script>
-    <script src="../scripts/main.js"></script>
-</head>
+<script src="scripts/trocarDiv.js"></script>
 
-<body>
-    <div class="fundoBotoes slidesDiv-fading">
-        <button onclick="trocarDiv(-1)">
-            Anterior
-        </button>
-        <button onclick="trocarDiv(+1)">
-            Próximo
-        </button>
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h3>Mundo 1</h3>
-        <h1>Kricktria</h1>
-        <img src="../images/grandchase/mobile/maps/01_Kricktria.png" class="imagemMundos">
-        <p>
-            Kricktria é o mundo inicial da aventura que ocorre em GrandChase Dimensional Chaser.<br>
-            Neste mundo é introduzido os novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago
-            Caxias Grandiel.<br>
-            Vale ressaltar que este mundo não faz parte da dimensão de Ernas.
-        </p>
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h3>Mundo 2</h3>
-        <h1>Máusfia</h1>
-        <img src="../images/grandchase/mobile/maps/02_Mousepia.png" class="imagemMundos">
-        <p>
-            O segundo mundo do jogo, Máusfia, existe em uma dimensão diferente do mundo de Kricktria.<br>
-            Suas únicas terras conhecidas são dividas por um vórtice negro.
-        </p>
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h3>Mundo 3</h3>
-        <h1>Calnat</h1>
-        <img src="../images/grandchase/mobile/maps/03_Calnat.png" class="imagemMundos">
-        <p>
-            Diferente de Kricktria e Máusfia, esta versão de Calnat não é separada da dimensão de Ernas.<br>
-            Entretanto, trata-se de uma versão passada de Calnat que existia antes da Grande Explosão.
-        </p>
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h3>Mundo 4</h3>
-        <h1>Mundo dos Demônios - Crimson River</h1>
-        <img src="../images/grandchase/mobile/maps/04_CrimsonRiver.png" class="imagemMundos">
-        <p>
-            Crimson River é uma das regiões contidas no Mundo dos Demônios, também conhecido como Elyos.<br>
-            Além de ser a primeira vez em que a GrandChase foi para o Mundo dos Demônios.
-        </p>
-    </div>
-    <div class="fundoTextos slidesDiv slidesDiv-fading">
-        <h3>Mundo 5</h3>
-        <h1>Mundo dos Demônios - Burning Canyon</h1>
-        <img src="../images/grandchase/mobile/maps/05_BurningCanyon.png" class="imagemMundos">
-        <p>
-            Uma outra região da dimensão de Elyos, a qual se conecta ao Mundo dos Mortos, sendo uma dimensão
-            diferente de Elyos e Ernas.<br>
-        </p>
-    </div>
-</body>
-
-</html>
+<div class="fundoBotoes divsFading">
+    <button onclick="trocarDiv(-1)">
+        Anterior
+    </button>
+    <button onclick="trocarDiv(+1)">
+        Próximo
+    </button>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h3>Mundo 1</h3>
+    <h1>Kricktria</h1>
+    <img src="images/grandchase/mobile/maps/01_Kricktria.png" class="imagemMundos">
+    <p>
+        Kricktria é o mundo inicial da aventura que ocorre em GrandChase Dimensional Chaser.<br>
+        Neste mundo é introduzido os novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago
+        Caxias Grandiel.<br>
+        Vale ressaltar que este mundo não faz parte da dimensão de Ernas.
+    </p>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h3>Mundo 2</h3>
+    <h1>Máusfia</h1>
+    <img src="images/grandchase/mobile/maps/02_Mousepia.png" class="imagemMundos">
+    <p>
+        O segundo mundo do jogo, Máusfia, existe em uma dimensão diferente do mundo de Kricktria.<br>
+        Suas únicas terras conhecidas são dividas por um vórtice negro.
+    </p>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h3>Mundo 3</h3>
+    <h1>Calnat</h1>
+    <img src="images/grandchase/mobile/maps/03_Calnat.png" class="imagemMundos">
+    <p>
+        Diferente de Kricktria e Máusfia, esta versão de Calnat não é separada da dimensão de Ernas.<br>
+        Entretanto, trata-se de uma versão passada de Calnat que existia antes da Grande Explosão.
+    </p>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h3>Mundo 4</h3>
+    <h1>Mundo dos Demônios - Crimson River</h1>
+    <img src="images/grandchase/mobile/maps/04_CrimsonRiver.png" class="imagemMundos">
+    <p>
+        Crimson River é uma das regiões contidas no Mundo dos Demônios, também conhecido como Elyos.<br>
+        Além de ser a primeira vez em que a GrandChase foi para o Mundo dos Demônios.
+    </p>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h3>Mundo 5</h3>
+    <h1>Mundo dos Demônios - Burning Canyon</h1>
+    <img src="images/grandchase/mobile/maps/05_BurningCanyon.png" class="imagemMundos">
+    <p>
+        Uma outra região da dimensão de Elyos, a qual se conecta ao Mundo dos Mortos, sendo uma dimensão
+        diferente de Elyos e Ernas.<br>
+    </p>
+</div>
