Adicionado Novo Mundo e Revisado Conteúdo

--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -15,10 +15,9 @@
     <h1>Kricktria</h1>
     <img src="images/grandchase/mobile/maps/01_Kricktria.png" class="imagemMundos">
     <p>
-        Kricktria é o mundo inicial da aventura que ocorre em GrandChase Dimensional Chaser.<br>
-        Neste mundo é introduzido os novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago
-        Caxias Grandiel.<br>
-        Vale ressaltar que este mundo não faz parte da dimensão de Ernas.
+        Kricktria é o mundo inicial da aventura que ocorre em GrandChase Dimensional Chaser, em que são introduzidos os
+        novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br>
+        Essa mesma região não faz parte da dimensão de Ernas e Máusfia, além de ser composta por sete masmorras.
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -26,8 +25,11 @@
     <h1>Máusfia</h1>
     <img src="images/grandchase/mobile/maps/02_Mousepia.png" class="imagemMundos">
     <p>
-        O segundo mundo do jogo, Máusfia, existe em uma dimensão diferente do mundo de Kricktria.<br>
-        Suas únicas terras conhecidas são dividas por um vórtice negro.
+        Máusfia um outro mundo que aparece em GrandChase Dimensional Chaser, existindo em uma dimensão diferente de
+        Ernas e Kricktria.<br>
+        Suas únicas terras conhecidas são divididas em duas por com vórtice negro que ocupa o espaço eletrificado entre
+        elas.<br>
+        Essa é a segunda região explorada pela GrandChase e consiste em quatro masmorras.
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -35,17 +37,23 @@
     <h1>Calnat</h1>
     <img src="images/grandchase/mobile/maps/03_Calnat.png" class="imagemMundos">
     <p>
-        Diferente de Kricktria e Máusfia, esta versão de Calnat não é separada da dimensão de Ernas.<br>
-        Entretanto, trata-se de uma versão passada de Calnat que existia antes da Grande Explosão.
+        Calnat era um reino misterioso e altamente avançado em Arquimídia que se especializou em tecnologia mágica, mas
+        eventualmente desapareceu ao longo da história.<br>
+        No jogo original, os vestígios da destruição do reino de Calnat foram conhecidos através das masmorras "Ruínas
+        de um Reino Antigo" e "Império de Astaroth".<br>
+        Em Grand Chase Dimensional Chaser, a versão de Calnat antes de sua destruição é a terceira região explorada pela
+        GrandChase e consiste em quatro masmorras.
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
     <h3>Mundo 4</h3>
-    <h1>Mundo dos Demônios - Crimson River</h1>
+    <h1>Mundo dos Demônios - Crimsonriver</h1>
     <img src="images/grandchase/mobile/maps/04_CrimsonRiver.png" class="imagemMundos">
     <p>
-        Crimson River é uma das regiões contidas no Mundo dos Demônios, também conhecido como Elyos.<br>
-        Além de ser a primeira vez em que a GrandChase foi para o Mundo dos Demônios.
+        Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Ela ganhou seu homônimo do rio carmesim que
+        atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br>
+        Em GrandChase Dimensional Chaser, Crimsonriver é a quarta região explorada pela GrandChase e consiste em
+        quatro masmorras.
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -53,7 +61,23 @@
     <h1>Mundo dos Demônios - Burning Canyon</h1>
     <img src="images/grandchase/mobile/maps/05_BurningCanyon.png" class="imagemMundos">
     <p>
-        Uma outra região da dimensão de Elyos, a qual se conecta ao Mundo dos Mortos, sendo uma dimensão
-        diferente de Elyos e Ernas.<br>
+        Burning Canyon é uma área localizada no Mundo dos Demônios, Elyos. Região a qual ganhou seu homônimo das plantas
+        existentes na área, as quais possuem uma cor vermelha ardente, que quando vistas de longe dão a impressão de que
+        todo o vale está em chamas.<br>
+        Em GrandChase Dimensional Chaser, Burning Canyon é a quinta região explorada pela GrandChase e consiste em
+        quatro masmorras.<br>
+        Burning Canyon se conecta ao Mundo dos Mortos, sendo uma dimensão diferente de Elyos e Ernas.
+    </p>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h3>Mundo 6</h3>
+    <h1>Mundo dos Mortos - Submundo</h1>
+    <img src="images/grandchase/mobile/maps/06_Underworld.png" class="imagemMundos">
+    <p>
+        O Submundo é a terra dos mortos, em que muitas criaturas fugitivas como Nemophila, Vulcanus e Berkas se
+        originam, sendo também um mundo paralelo da dimensão de Ernas e uma dimensão separada do Mundo dos
+        Demônios, Elyos.<br>
+        Em GrandChase Dimensional Chaser, o Submundo é a sexta região explorada pela GrandChase e consiste em
+        quatro masmorras.
     </p>
 </div>
