Novas Mudanças e Melhorias

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -24,7 +24,8 @@
     <h3>Ano Divino, 1300</h3>
     <p>
         O demônio Heitaros do partido de demônios extremistas invadiu Ernas, e as Três Deusas luataram para
-        impedi-lo. Durante a guerra, Heitaros perdeu grande parte de seus poderes e sua posição no Mundo dos
+        impedi-lo.<br><br>
+        Durante a guerra, Heitaros perdeu grande parte de seus poderes e sua posição no Mundo dos
         Demônios. As Deusas também foram enfraquecidas e não puderam mais continuar naquele mundo.
     </p>
     <img src="images/history/2_firstmagicwar.png" class="imagemHistoria">
@@ -50,7 +51,7 @@
     <p>
         Após terminarem seus estudos no exterior, a Princesa de Canaban e companheiros estavam retornando para o
         reino quando foram atacados por Astaroth, além de invocar um feitiço de demonização na amiga da princesa
-        e guarda real, Karina.<br>
+        e guarda real, Karina.<br><br>
         Enquanto se transformava em um demônio, Karina foi declarada a principal culpada do incidente. Diante da
         dificuldade de encontrar qualquer pessoa que acreditasse nela, o desespero de Karina se transformou em
         ódio pela raça humana. Ela jurou lealdade a Astaroth e passou a se chamar Cazeaje.
@@ -61,7 +62,7 @@
     <h1>Guerra dos Reinos</h1>
     <h3>Ano dos Reinos, 1455</h3>
     <p>
-        Sob o controle de Cazeaje, o Reino de Canaban declarou guerra contra o Reino de Serdin.<br>
+        Sob o controle de Cazeaje, o Reino de Canaban declarou guerra contra o Reino de Serdin.<br><br>
         Por 5 anos a guerra se alastrou e o continente de Vermécia foi inteiramente banhado com sangue.
     </p>
     <img src="images/history/5_fiveyearwar.png" class="imagemHistoria">
@@ -95,7 +96,7 @@
 <div class="fundoTextos slidesDiv divsFading">
     <h1>Profecia dos 12 Discípulos</h1>
     <p>
-        Existia uma profecia de que a paz iria voltar a Ernas com o sacrifício de 12 pessoas.<br>
+        Existia uma profecia de que a paz iria voltar a Ernas com o sacrifício de 12 pessoas.<br><br>
         O grupo da GrandChase que havia se reunido graças à profecia lutou contra Veigas, o Emissãrio da
         Destruição, que veio para destruir Ernas. Entretanto, durante esta batalha, Veigas percebeu que a
         profecia era falsa.
@@ -106,7 +107,7 @@
     <h1>Torre da Extinção</h1>
     <p>
         No fim da Profecia dos 12 Discípulos, a Torre da Extinção apareceu. Lá dentro, Cazeaje e Elscud
-        esperavam pela GrandChase.<br>
+        esperavam pela GrandChase.<br><br>
         Eles recuaram após o confronto com a GrandChase e, enquanto desapareciam, uma Fenda Dimensional abriu no
         centro da Torre da Extinção.
     </p>
