--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -16,7 +16,7 @@
     <img src="images/grandchase/mobile/maps/01_Kricktria.png" class="imagemMundos">
     <p>
         Kricktria é o mundo inicial da aventura que ocorre em GrandChase Dimensional Chaser, em que são introduzidos os
-        novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br>
+        novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br><br>
         Essa mesma região não faz parte da dimensão de Ernas e Máusfia, além de ser composta por sete masmorras.
     </p>
 </div>
@@ -26,9 +26,9 @@
     <img src="images/grandchase/mobile/maps/02_Mousepia.png" class="imagemMundos">
     <p>
         Máusfia um outro mundo que aparece em GrandChase Dimensional Chaser, existindo em uma dimensão diferente de
-        Ernas e Kricktria.<br>
-        Suas únicas terras conhecidas são divididas em duas por com vórtice negro que ocupa o espaço eletrificado entre
-        elas.<br>
+        Ernas e Kricktria.<br><br>
+        Suas únicas terras conhecidas são divididas em duas por um vórtice negro que ocupa o espaço eletrificado entre
+        elas.<br><br>
         Essa é a segunda região explorada pela GrandChase e consiste em quatro masmorras.
     </p>
 </div>
@@ -38,9 +38,9 @@
     <img src="images/grandchase/mobile/maps/03_Calnat.png" class="imagemMundos">
     <p>
         Calnat era um reino misterioso e altamente avançado em Arquimídia que se especializou em tecnologia mágica, mas
-        eventualmente desapareceu ao longo da história.<br>
+        eventualmente desapareceu ao longo da história.<br><br>
         No jogo original, os vestígios da destruição do reino de Calnat foram conhecidos através das masmorras "Ruínas
-        de um Reino Antigo" e "Império de Astaroth".<br>
+        de um Reino Antigo" e "Império de Astaroth".<br><br>
         Em Grand Chase Dimensional Chaser, a versão de Calnat antes de sua destruição é a terceira região explorada pela
         GrandChase e consiste em quatro masmorras.
     </p>
@@ -51,7 +51,7 @@
     <img src="images/grandchase/mobile/maps/04_CrimsonRiver.png" class="imagemMundos">
     <p>
         Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Ela ganhou seu homônimo do rio carmesim que
-        atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br>
+        atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
         Em GrandChase Dimensional Chaser, Crimsonriver é a quarta região explorada pela GrandChase e consiste em
         quatro masmorras.
     </p>
@@ -63,10 +63,11 @@
     <p>
         Burning Canyon é uma área localizada no Mundo dos Demônios, Elyos. Região a qual ganhou seu homônimo das plantas
         existentes na área, as quais possuem uma cor vermelha ardente, que quando vistas de longe dão a impressão de que
-        todo o vale está em chamas.<br>
+        todo o vale está em chamas.<br><br>
         Em GrandChase Dimensional Chaser, Burning Canyon é a quinta região explorada pela GrandChase e consiste em
-        quatro masmorras.<br>
-        Burning Canyon se conecta ao Mundo dos Mortos, sendo uma dimensão diferente de Elyos e Ernas.
+        quatro masmorras.<br><br>
+        Burning Canyon também se conecta ao Mundo dos Mortos por meio do "Expresso do Submundo", sendo uma dimensão
+        diferente de Elyos e Ernas.
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -76,7 +77,7 @@
     <p>
         O Submundo é a terra dos mortos, em que muitas criaturas fugitivas como Nemophila, Vulcanus e Berkas se
         originam, sendo também um mundo paralelo da dimensão de Ernas e uma dimensão separada do Mundo dos
-        Demônios, Elyos.<br>
+        Demônios, Elyos.<br><br>
         Em GrandChase Dimensional Chaser, o Submundo é a sexta região explorada pela GrandChase e consiste em
         quatro masmorras.
     </p>
