--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -374,7 +374,7 @@
                             <img src="images/icons/Category_Mage.png" class="tipo">
                         </td>
                         <td>
-                            <h1>Rey von Crimson River</h1>
+                            <h1>Rey Von Crimsonriver</h1>
                         </td>
                     </tr>
                 </table>
@@ -446,7 +446,7 @@
                 </p>
             </div>
         </div>
-        <!--Azin-->
+        <!--Asin-->
         <div class="personagensDiv divsFading">
             <div class="imagemPersonagem">
                 <table>
@@ -455,13 +455,13 @@
                             <img src="images/icons/Category_Tank.png" class="tipo">
                         </td>
                         <td>
-                            <h1>Azin</h1>
+                            <h1>Asin</h1>
                         </td>
                     </tr>
                 </table>
-                <img src="images/grandchase/mobile/16_Grand_Chase_for_kakao_Azin_01.png"
-                    onmouseover="this.src='images/grandchase/mobile/16_Grand_Chase_for_kakao_Azin_02.png';"
-                    onmouseout="this.src='images/grandchase/mobile/16_Grand_Chase_for_kakao_Azin_01.png';"
+                <img src="images/grandchase/mobile/16_Grand_Chase_for_kakao_Asin_01.png"
+                    onmouseover="this.src='images/grandchase/mobile/16_Grand_Chase_for_kakao_Asin_02.png';"
+                    onmouseout="this.src='images/grandchase/mobile/16_Grand_Chase_for_kakao_Asin_01.png';"
                     class="imagem" />
             </div>
             <div class="descricaoPersonagem">
@@ -519,7 +519,7 @@
                     class="imagem" />
             </div>
             <div class="descricaoPersonagem">
-                <h2>"A Última Esperança do Domínio Frost"</h2>
+                <h2>"A Última Esperança da Família Frost"</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate cumque adipisci
                     officiis libero accusantium aperiam inventore commodi pariatur veniam consequatur exercitationem
