--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <body>
-    <div class="fundoTextos divsFading" style="height: auto">
+    <div class="fundoTextos divsFading" style="height: 97%">
         <img src="images/grandchase/mobile/logos/Logo_01.png" class="imagemSobre" style="width: 40%">
         <p style="font-size: 2vh">
             GrandChase: Dimensional Chaser, também conhecido como GrandChase for Kakao na Coréia do Sul e às vezes
