--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="content" id="main">
             <div class="fundoBotoes divsFading"
                 style="position: absolute; bottom: 0; right: 0; width: 35%; margin-right: 1%; margin-bottom: 1%">
-                <p>
+                <p style="padding-left: 5%; padding-right: 5%;">
                     Instituto Federal de São Paulo, Câmpus Hortolândia<br>
                     Curso: Análise e Desenvolvido de Sistemas - 5º Semestre (2019)<br>
                     Disciplina: Desenvolvimento Web<br>
